# Kimi-X

./: .coveragerc  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  README_INSTALL.md  demo_economy.py  pyproject.toml
.github/workflows/: ci.yml
config/: dev.yaml  prod.yaml  test.yaml
docs/: api_reference.md  architecture.md  deployment.md  future_roadmap.md
kimix/: __init__.py  __main__.py  cli.py  i18n.py  main_enhanced.py  version.py
kimix/bots/: __init__.py  base.py  dingtalk.py  discord.py  feishu.py  models.py  router.py  runner.py  setup.py  slack.py  telegram.py  wecom.py
kimix/config/: __init__.py  auth.py  defaults.py  settings.py
kimix/core/: __init__.py  agent_economy.py  auto_economy.py  classical_chinese.py  context.py  core_rules.py  engine.py  events.py  healing.py  observability.py  preflight.py  progress_whip.py  session.py  turn.py
kimix/learning/: __init__.py  evolver.py  models.py  optimizer.py  reflector.py  retriever.py  store.py
kimix/llm/: __init__.py  client.py  cost_tracker.py  models.py  multi_model.py  streaming.py
kimix/memory/: __init__.py  enhanced_memory.py  episodic.py  experience.py  hierarchical_memory.py  hindsight.py  manager.py  memory_bank.py  models.py  semantic.py  working.py
kimix/modes/: __init__.py  agent.py  auto.py  base.py  explore.py  plan.py  router.py  yolo.py
kimix/subagents/: __init__.py  models.py  orchestrator.py  worker.py
kimix/tools/: __init__.py  agent_tools.py  base.py  clawtip.py  document_converter.py  extensions.py  file_tools.py  git_tool.py  git_tools.py  registry.py  rtk.py  sandbox.py  shell_tools.py  system_tools.py  web_search.py  web_search_enhanced.py  web_tools.py
kimix/ui/: __init__.py  cli.py  components.py  renderers.py  tui.py
kimix/utils/: __init__.py  helpers.py  logger.py  sandbox.py  validators.py
scripts/: benchmark.py  security_audit.py  verify_install.py
skills/cron-automation/: SKILL.md
skills/gstack/: SKILL.md
skills/superpowers/: SKILL.md
tests/: __init__.py  conftest.py
tests/benchmark/: test_latency.py
tests/chaos/: test_chaos.py
tests/integration/: test_agent_flow.py  test_cloud_platform.py  test_engine_end_to_end.py  test_new_features.py
tests/manual/: run_recovery_tests.py
tests/smoke/: test_llm_smoke.py
tests/soak/: test_resource_leak.py
tests/stress/: test_concurrency.py
tests/swe_bench/: run_swe_bench.py
tests/unit/: test_clawtip_local.py  test_config.py  test_core_rules.py  test_cost_tracker.py  test_engine.py  test_file_tools.py  test_git_tools.py  test_intelligent_recovery.py  test_llm_models.py  test_memory.py  test_modes.py  test_progress_whip.py  test_sandbox.py  test_sandbox_whitelist.py  test_shell_tools.py  test_streaming_edge_cases.py  test_subagents.py  test_tool_registry.py
